[package]
name = "riddle_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
teloxide = { version = "0.12", features = ["macros"] }

tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
pretty_env_logger = "0.4"

regex = "1.5"

rand = "0.8"

async-trait = "0.1"

lazy_static = "1.4"
